--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "target": "es6",
+    "lib": ["es7"],
     "sourceMap": false,
     "declaration": true,
     "noImplicitAny": false,
