--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "program": "${workspaceRoot}/node_modules/ava/profile.js",
       "args": [
         // "${file}",
-        "${workspaceRoot}/dist.test/test/mock.spec.js",
+        "${workspaceRoot}/dist.test/test/url.spec.js",
       ],
       "skipFiles": [
         "<node_internals>/**/*.js"
