--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourdollar",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Private Utility Module",
   "main": "dist/fourdollar.js",
   "types": "dist/fourdollar.d.ts",
@@ -50,7 +50,7 @@
   },
   "ava": {
     "files": [
-      "dist.test/test/**/*.spec.js"
+      "dist.test/test/**/timer.spec.js"
     ]
   }
 }
