--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "target": "es6",
-    "lib": ["es7"],
+    "lib": ["es7", "dom"],
     "sourceMap": false,
     "declaration": true,
     "noImplicitAny": false,
