--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourdollar",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "Private Utility Module",
   "main": "dist/fourdollar.js",
   "types": "dist/fourdollar.d.ts",
@@ -38,9 +38,7 @@
     "@types/fs-extra": "^5.0.2",
     "@types/node": "^10.1.3",
     "ava": "^0.25.0",
-    "fourdollar.promisify": "^1.0.5",
     "glob": "^7.1.2",
-    "stop.js": "^0.2.3",
     "typescript": "^2.8.3"
   },
   "dependencies": {
@@ -50,7 +48,7 @@
   },
   "ava": {
     "files": [
-      "dist.test/test/**/timer.spec.js"
+      "dist.test/test/**/**.spec.js"
     ]
   }
 }
