--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourdollar",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Private Utility Module",
   "main": "dist/fourdollar.js",
   "types": "dist/fourdollar.d.ts",
@@ -48,7 +48,7 @@
   },
   "ava": {
     "files": [
-      "dist.test/test/**/**.spec.js"
+      "dist.test/test/**/*.spec.js"
     ]
   }
 }
