--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourdollar",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Private Utility Module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,9 +37,11 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.10.3",
+    "@types/zen-observable": "^0.8.3",
     "ava": "^3.15.0",
     "glob": "^7.2.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "zen-observable": "^0.8.15"
   },
   "dependencies": {
     "fecha": "^4.2.1",
@@ -48,7 +50,7 @@
   },
   "ava": {
     "files": [
-      "dist.test/test/**/logger.v2.spec.js"
+      "dist.test/test/**/*.spec.js"
     ]
   }
 }
