--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourdollar",
-  "version": "2.4.1",
+  "version": "2.5.0",
   "description": "Private Utility Module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -50,7 +50,7 @@
   },
   "ava": {
     "files": [
-      "dist.test/test/**/logger.v2.spec.js"
+      "dist.test/test/**/observable.spec.js"
     ]
   }
 }
